# todo-cli

./: .gitignore  Cargo.toml  README.md  generate_todos.ps1  generate_todos.sh
.github/workflows/: rust.yml
src/: cli.rs  main.rs  todo.rs
