[package]
name = "todos"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
inquire = "0.7.5"
ron = "0.8.1"
serde = { version = "1.0.203", features = ["derive"] }
strum = { version = "0.26.2", features = ["derive"] }
uuid = { version = "1.8.0", features = ["fast-rng", "v4", "serde"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
